--- a/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -28,7 +28,7 @@
 
   <!-- CLASSROOM OPTIONS TOOL BAR -->
   <div *ngIf="classroom">
-    <div class="optionsBtnContainer">
+    <div class="teacherOptionsBtnContainer">
       <!-- SHARE CODE -->
       <div class="optionsBtn" (click)="openCodeDialog()">
         {{ ts.l.share_code }}
