--- a/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.scss
+++ b/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.scss
@@ -22,11 +22,11 @@
     border-radius: 5px;
 }
 
-.optionsBtnContainer > * {
+.teacherOptionsBtnContainer > * {
     height: 2rem;
 }
 
-.optionsBtnContainer {
+.teacherOptionsBtnContainer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
