--- a/ngapp/src/app/profile/account-settings/account-settings.component.html
+++ b/ngapp/src/app/profile/account-settings/account-settings.component.html
@@ -1,62 +1,46 @@
-<div class="profileContainer" *ngIf="auth.getUserDetails()">
-    <!-- Profile options -->
-    <div class="formTitle">{{ts.l.profile}}</div><br>
-    <div class="formBody">  
-      <div class="profileFormContainer">
-        <!-- error message container -->
-        <div class="usernameErrorText"> {{errorMessage}} </div>
-        <!-- username details -->
-        <div class="form-group">
-          <div class="formLabel">{{ts.l.username}} :</div>
-          <div class="userInfo">
-            <i>{{auth.getUserDetails().username}}</i>
-            <i class="fas fa-edit headerIconBtn" (click)="openUpdateUsernameDialog()"></i>
-          </div>
+<div class="bodyContainer">
+  <div class="settingsContainer">
+    <!-- column one-->
+    <div>
+      <div class="settingsEntryContainer">
+        <div class="settingsLabel"> Username </div>
+        <div class="settingsEntry">
+          <div> username </div>
+          <i class="fas fa-edit headerIconBtn" (click)="openUpdateUsernameDialog()"></i>
         </div>
-        <!-- classroom details if STUDENT -->
-        <div class="form-group" *ngIf="classroom && auth.getUserDetails().role === 'STUDENT'">
-          <div class="formLabel">{{ts.l.classroom}} :</div>
-          <div class="userInfo"><i>{{classroom.title}}</i></div>
-          <button class="btn leaveClassroomButton" (click)="leaveClassroom()">{{ts.l.leave}}</button>
+      </div>
+      <div class="settingsEntryContainer">
+        <div class="settingsLabel"> Password </div>
+        <div class="settingsEntry">
+          <div> *******</div>
+          <i class="fas fa-edit headerIconBtn" (click)="openUpdateUsernameDialog()"></i>
         </div>
-        <!-- join classroom option STUDENT -->
-        <div class="form-group-vertical" *ngIf="!classroom && auth.getUserDetails().role === 'STUDENT'">
-          <div class="form-group-section">
-            <div class="formLabel">{{ts.l.classroom_code}} :</div>
-            <input type="text" class="form-control inputField" placeholder="{{ts.l.enter_code}}" name="classroomcode" [formControl]="codeInput">
-          </div>
-          <div class="classroomMessages">
-            <div *ngIf="classroomCodeOutput" class="notFoundText classroomMessage">{{classroomCodeOutput}}</div>
-            <div *ngIf="foundClassroom" class="greenLink classroomMessage" (click)="joinClassroom()">{{ts.l.join_classroom}} '<b>{{foundClassroom.title}}</b>'?</div>
-          </div>
+      </div>
+      <div class="settingsEntryContainer">
+        <div class="settingsLabel"> Classrooom </div>
+        <div class="settingsEntry">
+          <div> {{classroom?.title}} </div>
+          <button *ngIf="classroom">Leave</button>
         </div>
-        <!-- change language -->
-        <div class="form-group">
-          <div class="formLabel">{{ts.l.language}} :</div>
-          <div *ngIf="ts.inEnglish()" class="languageButtonContainer">
-            <div class="languageButton languageButtonSelected">{{ts.l.english}}</div>
-            <div class="languageButton" (click)="ts.setLanguage('ga')">{{ts.l.irish}}</div>
-          </div>
-          <div *ngIf="ts.inIrish()" class="languageButtonContainer">
-            <div class="languageButton" (click)="ts.setLanguage('en')">{{ts.l.english}}</div>
-            <div class="languageButton languageButtonSelected">{{ts.l.irish}}</div>
-          </div>
-        </div>
-        <div class="accountButtonContainer">
-          <!-- delete account -->
-          <div>
-            <button class="btn deleteAccountButton" (click)="openDeleteDialog()"> {{ts.l.delete_my_account}} </button>
-          </div>
-          <!-- Change password -->
-          <div>
-            <button class="btn passwordButton" (click)="openUpdatePasswordDialog()"> {{ts.l.change_password}} </button>
-          </div>
-        </div>
-        <!-- sign out and profile information -->
-        <!-- <div class="profileBtnContainer">
-          <button routerLink="/register-profile" class="btn logoutBtn">{{ts.l.my_info}}</button>
-          <button routerLink="/landing" class="btn logoutBtn" (click)="logout()">{{ts.l.sign_out}} <i class="fas fa-sign-out-alt"></i></button>
-        </div> -->
       </div>
     </div>
+    <!-- column two-->
+    <div>
+      <div class="settingsEntryContainer">
+        <div class="settingsLabel"> Email </div>
+        <div class="settingsEntry">
+          <div> email@test.com </div>
+          <i class="fas fa-edit headerIconBtn" (click)="openUpdateUsernameDialog()"></i>
+        </div>
+      </div>
+      <div class="settingsEntryContainer">
+        <div class="settingsLabel"> Dialect Preference </div>
+        <select [(ngModel)]="dialectPreference">
+          <option *ngFor="let opt of dialectPreferences">{{opt}}</option>
+        </select>
+      </div>
+    </div>
+  </div>
+  
+  <div class="deleteAccount"> Delete account </div>
 </div>
