--- a/ngapp/src/app/profile/account-settings/account-settings.component.html
+++ b/ngapp/src/app/profile/account-settings/account-settings.component.html
@@ -2,45 +2,65 @@
   <div class="settingsContainer">
     <!-- column one-->
     <div>
+      <!-- Username -->
       <div class="settingsEntryContainer">
-        <div class="settingsLabel"> Username </div>
+        <div class="settingsLabel">{{ ts.l.username }}</div>
         <div class="settingsEntry">
-          <div> username </div>
-          <i class="fas fa-edit headerIconBtn" (click)="openUpdateUsernameDialog()"></i>
+          <div class="settingsValue">{{ user?.username }}</div>
+          <i class="fas fa-edit headerIconBtn" (click)="openUpdateUsernameDialog()" ></i>
+        </div>
+        <div class="errorMessage">{{ errorMessage }}</div>
+      </div>
+      <!-- Password-->
+      <div class="settingsEntryContainer">
+        <div class="settingsLabel">{{ ts.l.password }}</div>
+        <div class="settingsEntry">
+          <div class="settingsValue">*********</div>
+          <i class="fas fa-edit headerIconBtn" (click)="openUpdatePasswordDialog()" ></i>
         </div>
       </div>
-      <div class="settingsEntryContainer">
-        <div class="settingsLabel"> Password </div>
-        <div class="settingsEntry">
-          <div> *******</div>
-          <i class="fas fa-edit headerIconBtn" (click)="openUpdateUsernameDialog()"></i>
+      <!-- Classroom -->
+      <div class="settingsEntryContainer" *ngIf="auth.getUserDetails().role === 'STUDENT'" >
+        <div class="settingsLabel">{{ ts.l.classroom }}</div>
+        <!-- classroom if already joined -->
+        <div class="settingsEntry" *ngIf="classroom">
+          <div class="settingsValue">{{ classroom?.title }}</div>
+          <button *ngIf="classroom" class="btn leaveClassroomButton" (click)="leaveClassroom()" >
+            {{ ts.l.leave }}
+          </button>
         </div>
-      </div>
-      <div class="settingsEntryContainer">
-        <div class="settingsLabel"> Classrooom </div>
-        <div class="settingsEntry">
-          <div> {{classroom?.title}} </div>
-          <button *ngIf="classroom">Leave</button>
+        <!-- join classroom if not joined -->
+        <div *ngIf="!classroom">
+          <div class="settingsEntry">
+            <div style="padding-top: 10px">{{ ts.l.enter_code }} :</div>
+            <input type="text" class="codeInputField" maxlength="7" size="7" [formControl]="codeInput" />
+          </div>
+          <!-- join classroom message / error message -->
+          <div *ngIf="classroomCodeOutput" class="errorMessage">
+            {{ classroomCodeOutput }}
+          </div>
+          <div *ngIf="foundClassroom" class="greenLink" (click)="joinClassroom()" > {{ ts.l.join_classroom }} '<b>{{ foundClassroom.title }}</b >'? </div>
         </div>
       </div>
     </div>
     <!-- column two-->
     <div>
+      <!-- Email -->
       <div class="settingsEntryContainer">
-        <div class="settingsLabel"> Email </div>
+        <div class="settingsLabel">{{ ts.l.email }}</div>
         <div class="settingsEntry">
-          <div> email@test.com </div>
-          <i class="fas fa-edit headerIconBtn" (click)="openUpdateUsernameDialog()"></i>
+          <div class="settingsValue">{{ user?.email }}</div>
+          <!-- <i class="fas fa-edit headerIconBtn" ></i> -->
         </div>
       </div>
+      <!-- Dialect -->
       <div class="settingsEntryContainer">
-        <div class="settingsLabel"> Dialect Preference </div>
-        <select [(ngModel)]="dialectPreference">
-          <option *ngFor="let opt of dialectPreferences">{{opt}}</option>
+        <div class="settingsLabel">{{ ts.l.dialect }}</div>
+        <select [(ngModel)]="dialectPreference" style="width: 300px" id="dialectSelect">
+          <option *ngFor="let opt of dialectPreferences">{{ opt }}</option>
         </select>
       </div>
     </div>
   </div>
-  
-  <div class="deleteAccount"> Delete account </div>
+  <div class="deleteAccount">{{ ts.l.delete_my_account }}</div>
 </div>
