--- a/ngapp/src/app/profile/account-settings/account-settings.component.scss
+++ b/ngapp/src/app/profile/account-settings/account-settings.component.scss
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     gap: 4rem;
+    flex-wrap: wrap;
 }
 
 // each account info box
@@ -19,6 +20,7 @@
     padding: 50px;
 }
 
+// label for info box
 .settingsLabel {
     font-size: 16pt;
     padding-bottom: 10px;
@@ -28,18 +30,67 @@
 .settingsEntry {
     display: flex;
     justify-content: space-between;
-    width: 250px;
+}
+
+.settingsValue {
+    width: 300px;
     overflow-x: scroll;
 }
 
 .deleteAccount {
     color: var(--delete-red);
     text-align: left;
-    padding-left: 30%;
+    padding-left: 20%;
 }
 
 .deleteAccount:hover {
     color: var(--delete-red-hover);
     cursor: pointer;
     text-decoration: underline;
+}
+
+.leaveClassroomButton {
+    background-color: var(--delete-red);
+    border-radius: 5px;
+    padding: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 12pt;
+}
+
+.leaveClassroomButton:hover {
+    background-color: var(--delete-red-hover);
+    transition: 0.5s;
+}
+
+.errorMessage {
+    font-size: 12pt;
+    color: red;
+}
+
+.greenLink {
+    text-decoration: underline;
+    color: var(--scealai-green);
+    font-size: 12pt;
+}
+
+.greenLink:hover {
+    cursor: pointer;
+}
+
+.codeInputField {
+    display: block;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.375rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
