--- a/ngapp/src/app/lib/quill-highlight/gramadoir-tags.scss
+++ b/ngapp/src/app/lib/quill-highlight/gramadoir-tags.scss
@@ -11,14 +11,6 @@
   border-radius: 6px;
 }
 
-[highlight-tag].left-edge {
-  padding-left: 1px;
-}
-
-// [highlight-tag].right-edge {
-//   padding-right: 1px;
-// }
-
 // div.ql-editor [id][highlight-tag]:not(.right-edge):not(.left-edge) {
 //   margin-right: -1px !important;
 //   margin-left: -1px !important;
@@ -29,10 +21,61 @@
   margin: 0.3em;
 }
 
+.ql-editor * {
+  padding-top: 0.1em !important;
+  padding-bottom: 0.1em !important;
+  max-width: 150mm;
+  margin: auto !important;
+}
+
+
+// [highlight-tag].right-edge {
+  //   padding-right: 1px;
+  // }
+
 [highlight-tag]
 {
-  text-decoration: underline;
-  text-decoration-color: var(--highlight-error-red);
-  text-decoration-thickness: 3px;
   position: relative;
+  text-decoration: none;
+}
+
+[highlight-tag]::after
+{
+  content: "";
+  position: absolute;
+  left: 0%;
+  bottom: -1px;
+  width: 100%;
+  height: 3px;
+  background: var(--highlight-error-red);
+}
+
+[left-edge]::after {
+  content: "";
+  position: absolute;
+  left: 10%;
+  bottom: -1px;
+  width: 90%;
+  height: 3px;
+  background: var(--highlight-error-red);
+}
+
+[right-edge]::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 90%;
+  height: 3px;
+  background: var(--highlight-error-red);
+}
+
+[left-edge][right-edge]::after {
+  content: "";
+  position: absolute;
+  left: 5%;
+  bottom: -1px;
+  width: 90%;
+  height: 3px;
+  background: var(--highlight-error-red);
 }
