--- a/ngapp/src/app/story-stats/grammar-error-time/grammar-error-time/grammar-error-time.component.html
+++ b/ngapp/src/app/story-stats/grammar-error-time/grammar-error-time/grammar-error-time.component.html
@@ -1,5 +1,5 @@
 <div class="chartContainer">
-    <div class="legendContainer" *ngIf="legendItems.length > 0">
+    <div class="legendContainer" *ngIf="legendItems.length > 0; else noErrors">
       <div class="legend">{{ts.l.legend}}</div>
       <hr/>
       <div *ngFor="let item of legendItems">
@@ -10,6 +10,7 @@
         </div>
       </div>
     </div>
+    <ng-template #noErrors> No errors in the past 90 days </ng-template>
     <div class="graphContainer">
       <canvas id="grammar-errors-time-chart" width="200" height="200"></canvas>
     </div>
