--- a/ngapp/src/app/nav-bar/about-lara/about-lara.component.html
+++ b/ngapp/src/app/nav-bar/about-lara/about-lara.component.html
@@ -76,6 +76,9 @@
             <li> An Tornapa Mór Millteach </li>
           </ul>
         </div>
+        <mat-action-row>
+          <div class="viewStoryBtn" routerLink="/resources">{{ts.l.view_stories}}</div>
+        </mat-action-row>
     </mat-expansion-panel>
     <!-- LARA features and functionality -->
     <mat-expansion-panel>
