--- a/ngapp/src/app/profile/profile/profile.component.html
+++ b/ngapp/src/app/profile/profile/profile.component.html
@@ -2,10 +2,10 @@
   <!-- Side menu for selecting which component to view -->
   <div class="sideMenu">
     <div (click)="setCurrentDisplay('accountSettings', 'accountSettings')" id="accountSettings">
-      Account Settings
+      {{ts.l.account_settings}}
     </div>
     <div (click)="setCurrentDisplay('languageInfo', 'languageInfo')" id="languageInfo">
-      My Language Information
+      {{ts.l.my_language_info}}
     </div>
     <!-- <div (click)="setCurrentDisplay('learningGoals', 'learningGoals')" id="learningGoals">
       Learning Goals
