--- a/ngapp/src/app/student/dashboard/dashboard.component.scss
+++ b/ngapp/src/app/student/dashboard/dashboard.component.scss
@@ -146,6 +146,13 @@
     'opsz' 48
 }
 
+.wordCount {
+    float: right;
+    padding-right: 20px;
+    padding-top: 7px;
+    font-size: 12pt;
+}
+
 .newStoryMessage {
     font-weight: bolder;
     max-width: 200px;
