--- a/ngapp/src/app/teacher/classroom-drawer/classroom-drawer.component.html
+++ b/ngapp/src/app/teacher/classroom-drawer/classroom-drawer.component.html
@@ -1,6 +1,10 @@
 <div class="body">
   <div *ngIf="classrooms.length > 0">
     <div class="myStories">{{ ts.l.my_classrooms }}</div>
+    <div class="subHeader">
+      <div>{{ts.l.title}}</div><div> No. students</div>
+    </div>
+    <hr />
     <!-- search bar -->
     <!-- <div class="form-group">
         <input
