--- a/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.scss
+++ b/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.scss
@@ -65,7 +65,9 @@
 }
 
 .storyListDrawer {
-    padding: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 10px;
     max-width: 35%;
     height: 100%;
 }
