arrow indicating new story

--- a/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -72,7 +72,8 @@
         <grid-spinner></grid-spinner>
       </div>
       <div *ngIf="classroomsLoaded" class="newStoryMessage">
-        Click on the '+' button below to create your first classroom!
+        <i class="fas fa-arrow-left fa-3x" style="animation: pulse 2s infinite linear; padding-right:20px"></i>
+        <div>Click on the '+' button to create your first classroom!</div>
       </div>
     </ng-template>
   </div>
