--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -146,7 +146,8 @@
     <!-- NO STORIES MESSAGE-->
     <ng-template #newStoryMessage>
       <div *ngIf="storiesLoaded" class="newStoryMessage">
-        Click on the '+' button to create your first story!
+        <i class="fas fa-arrow-left fa-3x" style="animation: pulse 2s infinite linear;"></i>
+        <div>Click on the '+' button to create your first story!</div>
       </div>
     </ng-template>
   </div>
