--- a/ngapp/src/app/student/dashboard/dashboard.component.scss
+++ b/ngapp/src/app/student/dashboard/dashboard.component.scss
@@ -148,11 +148,15 @@
 
 .newStoryMessage {
     font-weight: bolder;
-    max-width: 200px;
+    max-width: 300px;
     padding-top: 50px;
     padding-bottom: 50px;
+    padding-left: 50px;
     height: 80vh;
     width: 100%;
+    display:flex;
+    align-items: end;
+    justify-content: center;
 }
 
 .rightDrawer {
