--- a/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.scss
+++ b/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.scss
@@ -102,9 +102,12 @@
 
 .newStoryMessage {
     font-weight: bolder;
-    max-width: 200px;
+    max-width: 300px;
     padding-top: 50px;
     padding-bottom: 50px;
+    padding-left: 50px;
     height: 80vh;
     width: 100%;
+    display:flex;
+    align-items: end;
 }
