--- a/ngapp/src/app/teacher/teacher-feedback/teacher-feedback.component.scss
+++ b/ngapp/src/app/teacher/teacher-feedback/teacher-feedback.component.scss
@@ -107,6 +107,7 @@
     flex: 1;
     padding-top: 50px;
     background-color: white;
+    overflow-x: hidden;
 }
 
 .commentsList {
@@ -119,18 +120,6 @@
 
 .comment {
     width: 60%;
-    text-align: left;
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 20px;
-    font-size: 10pt;
-}
-
-.comment:hover {
-    background-color:rgba(0,0,0,.04);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
 }
 
 .ql-toolbar.ql-snow {
